--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -1,3 +1,4 @@
+/*---------------global styles---------------*/
 :root {
     --primary: #6979f8;
     --primary-hover: #A5AFFB;
@@ -11,8 +12,14 @@
     --warning-hover: #FFC7A6;
     --danger: #FF647C;
     --danger-hover: #FDAFBB;
+
+    --button-hover-primary: cornflowerblue;
+    --button-hover-secondary: darkorange;
+
+    --navbar-height: 50px;
 }
 
+/*---------------null styles---------------*/
 * {
     margin: 0;
     padding: 0;
@@ -22,24 +29,27 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
-.app {
+.container {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
+    height: calc(100vh - 50px);
     margin: 0 auto;
     background-color: #f6f6f6;
-    //overflow-x: hidden;
 
-    .container {
+    .content {
         border: 1px solid black;
         width: 100%;
         max-width: 1400px;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 }
 
 /*---------------scrollbar---------------*/
-
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     background-color: #ffffff;
