--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -35,7 +35,7 @@
     align-items: center;
     width: 100%;
     height: calc(100vh - 50px);
-    margin: 0 auto;
+    //margin: 0 auto;
     background-color: #f6f6f6;
 
     .content {
@@ -46,7 +46,36 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+
+        //margin-left: 250px;
+        //padding: 30px;
+        //transition: 0.2s;
+        //
+        //&_full {
+        //    margin-left: 0;
+        //}
     }
+
+    //.sidebar_toggle {
+    //    position: fixed;
+    //    left: 0;
+    //    width: 15px;
+    //    background: var(--primary);
+    //    height: 100%;
+    //    top: 62px;
+    //    z-index: 1;
+    //    cursor: pointer;
+    //    color: #fff;
+    //    display: flex;
+    //    align-items: center;
+    //    justify-content: center;
+    //}
+
+    //@media screen and (max-width: 1023px) {
+    //    .content {
+    //        margin-left: 0;
+    //    }
+    //}
 }
 
 /*---------------scrollbar---------------*/
