--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -32,6 +32,11 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+a {
+    color: var(--primary);
+    text-decoration: none;
+}
+
 .container {
     display: flex;
     flex-direction: column;
@@ -43,20 +48,20 @@
 
     .content {
         border: 1px solid black;
-        width: 100%;
+        //width: 100%;
         max-width: 1400px;
 
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        //display: flex;
+        //flex-direction: column;
+        //align-items: center;
 
-        //margin-left: 250px;
-        //padding: 30px;
-        //transition: 0.2s;
-        //
-        //&_full {
-        //    margin-left: 0;
-        //}
+        margin-left: 250px;
+        padding: 30px;
+        transition: 0.2s;
+
+        &_full {
+            margin-left: 0;
+        }
     }
 
     //.sidebar_toggle {
