--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -47,7 +47,7 @@ a {
     background-color: #f6f6f6;
 
     .content {
-        border: 1px solid black;
+        //border: 1px solid black;
         //width: 100%;
         max-width: 1400px;
 
