--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -42,7 +42,7 @@ a {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: calc(100vh - 50px);
+    height: calc(100vh - var(--navbar-height));
     //margin: 0 auto;
     background-color: #f6f6f6;
 
@@ -64,22 +64,7 @@ a {
         }
     }
 
-    //.sidebar_toggle {
-    //    position: fixed;
-    //    left: 0;
-    //    width: 15px;
-    //    background: var(--primary);
-    //    height: 100%;
-    //    top: 62px;
-    //    z-index: 1;
-    //    cursor: pointer;
-    //    color: #fff;
-    //    display: flex;
-    //    align-items: center;
-    //    justify-content: center;
-    //}
-
-    //@media screen and (max-width: 1023px) {
+    //@media(max-width: 1023px) {
     //    .content {
     //        margin-left: 0;
     //    }
