add: button styles

--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -2,8 +2,8 @@
 :root {
     --primary: #6979f8;
     --primary-hover: #A5AFFB;
-    --second: #BE52F2;
-    --second-hover: #DBA5F5;
+    --secondary: #BE52F2;
+    --secondary-hover: #DBA5F5;
     --success: #00C48C;
     --success-hover: #7DDFC3;
     --info: #0084F4;
