fix: input validation

--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -13,6 +13,8 @@
     --danger: #FF647C;
     --danger-hover: #FDAFBB;
 
+    --error-text: red;
+
     --button-hover-primary: cornflowerblue;
     --button-hover-secondary: darkorange;
 
