--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -43,18 +43,19 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    //width: 100%;
     height: calc(100vh - var(--navbar-height));
     //margin: 0 auto;
+    margin-left: 15px;
     background-color: #f6f6f6;
 
     .content {
         //border: 1px solid black;
-        //width: 100%;
+        width: calc(100% - 280px);
         max-width: 1400px;
 
-        //display: flex;
-        //flex-direction: column;
+        display: flex;
+        flex-direction: column;
         //align-items: center;
 
         margin-left: 250px;
