add: Table flow

--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -48,7 +48,7 @@ a {
     //margin: 0 auto;
     margin-left: 15px;
     background-color: #f6f6f6;
-    overflow-y: hidden;
+    //overflow-y: hidden;
 
     .content {
         //border: 1px solid black;
