--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -44,6 +44,7 @@ a {
     flex-direction: column;
     align-items: center;
     //width: 100%;
+    //height: calc(100vh - var(--navbar-height));
     height: calc(100vh - var(--navbar-height));
     //margin: 0 auto;
     margin-left: 15px;
@@ -54,6 +55,7 @@ a {
         //border: 1px solid black;
         width: calc(100% - 280px);
         max-width: 1400px;
+        height: 100%;
 
         display: flex;
         flex-direction: column;
